# KursovaSP2

./: CMakeLists.txt  Makefile
src/: main.cpp
